--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: get dependencies
+        run: |
+          - npm ci
       - name: lint with eslint
         run: |
           ng lint
-      - name: npm ci and ng build
+      - name: build
         run: |
-          npm ci
           ng build
       - name: unit tests with angular core testing
         run: |
