--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,14 +28,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: get dependencies
         run: |
-          - npm ci
+          - npm install
       - name: lint with eslint
         run: |
-          ng lint
+          npm run lint
       - name: build
         run: |
-          ng build
+          npm run build
       - name: unit tests with angular core testing
         run: |
-          ng test
+          npm run test
 
