Core functionality added
Title

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-highcharts": "^12.0.0",
+    "component": "^1.1.0",
+    "highcharts": "^9.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
